[package]
name = "basic_bevy_pixel_camera"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple set of coponents, schedules, systems and helper functions to create any type of pixel camera"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"